attached_assets/Pasted-venv-clau-clauelx-productiva-gunicorn-bind-0-0-0-0-5000-reuse-port-reload-main-app-2025-0-1745153082908.txt
venv) clau@clauelx:~/productiva$ gunicorn --bind 0.0.0.0:5000 --reuse-port --reload main:app
[2025-04-20 12:44:21 +0000] [394841] [INFO] Starting gunicorn 23.0.0
[2025-04-20 12:44:21 +0000] [394841] [INFO] Listening at: http://0.0.0.0:5000 (394841)
[2025-04-20 12:44:21 +0000] [394841] [INFO] Using worker: sync
[2025-04-20 12:44:21 +0000] [394842] [INFO] Booting worker with pid: 394842
INFO:app:Initializing Flask application
[2025-04-20 12:44:21 +0000] [394842] [ERROR] invalid syntax (models.py, line 5)
Traceback (most recent call last):
  File "/home/clau/productiva/venv/lib/python3.12/site-packages/gunicorn/workers/base.py", line 147, in load_wsgi
    self.wsgi = self.app.wsgi()
                ^^^^^^^^^^^^^^^
  File "/home/clau/productiva/venv/lib/python3.12/site-packages/gunicorn/app/base.py", line 66, in wsgi
    self.callable = self.load()
                    ^^^^^^^^^^^
  File "/home/clau/productiva/venv/lib/python3.12/site-packages/gunicorn/app/wsgiapp.py", line 57, in load
    return self.load_wsgiapp()
           ^^^^^^^^^^^^^^^^^^^
  File "/home/clau/productiva/venv/lib/python3.12/site-packages/gunicorn/app/wsgiapp.py", line 47, in load_wsgiapp
    return util.import_app(self.app_uri)
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/home/clau/productiva/venv/lib/python3.12/site-packages/gunicorn/util.py", line 370, in import_app
    mod = importlib.import_module(module)
          ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/usr/lib/python3.12/importlib/__init__.py", line 90, in import_module
    return _bootstrap._gcd_import(name[level:], package, level)
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "<frozen importlib._bootstrap>", line 1387, in _gcd_import
  File "<frozen importlib._bootstrap>", line 1360, in _find_and_load
  File "<frozen importlib._bootstrap>", line 1331, in _find_and_load_unlocked
  File "<frozen importlib._bootstrap>", line 935, in _load_unlocked
  File "<frozen importlib._bootstrap_external>", line 995, in exec_module
  File "<frozen importlib._bootstrap>", line 488, in _call_with_frames_removed
  File "/home/clau/productiva/main.py", line 2, in <module>
    from app import app
  File "/home/clau/productiva/app.py", line 28, in <module>
    from models import *
  File "/home/clau/productiva/models.py", line 5
    pass, time, timedelta
        ^
SyntaxError: invalid syntax
